Make the Full Key species 'coming soon' note consistent.

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -26,7 +26,7 @@
     {% if not species_in_simple_key %}
         <div class="note">
           Data collection in progress.
-          Complete data are coming soon.
+          Complete data coming soon.
         </div>
     {% endif %}
 {% endblock %}
