Make a species page heading better fit its text.

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -150,7 +150,7 @@
                     {% endfor %}
                 </ul>
                 
-                <h2>Wetland Plant?</h2>
+                <h2>Wetland Status</h2>
                 {% if taxon.wetland_indicator_code %}
                     <p>
                         {{ taxon.wetland_indicator_text }}
