--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -30,6 +30,15 @@ body.taxa {
 
     @include shadowbox-photo-titles-credits;
 
+    .visit-dkey {
+        margin: 2em 0 0;
+        font-size:  $nav-font-size;
+        font-weight: normal;
+        a {
+            @extend .orange-button;
+        }
+    }
+
     /* For family and genus pages */
     .pics {
         margin-top: 20px;
