--- a/gobotany/taxa/templates/gobotany/genus.html
+++ b/gobotany/taxa/templates/gobotany/genus.html
@@ -66,6 +66,12 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                     >{{ species.scientific_name }}</a></i></li>
                 {% endfor %}
                 </ul>
+
+                <p class="visit-dkey">
+                  Visit this genus in the
+                  <a href="{% url dkey_page genus.name.lower %}"
+                     >Dichotomous Key</a>
+                </p>
 {% endblock %}
 
 {% block sidebar_content %}
