Fix #305 by putting dkey hybrids with both species
Before, a hybrid appeared only on the page of its first-numbered
species, just like in the FNA book, because in FNA all species appeared
together anyway. But since we put each species on its own page, a hybrid
should appear on the page of every one of its species. So with this
commit, a new dkey table exists to hold hybrids. Their text gets split
out of the text for their species, and becomes a separate database
entry.  And the species page now pulls all hybrids in for the species
being viewed.

--- a/gobotany/taxa/templates/gobotany/_info_from_flora.html
+++ b/gobotany/taxa/templates/gobotany/_info_from_flora.html
@@ -3,5 +3,25 @@
     <h2 id="dkey">Information from Dichotomous Key of Flora Novae Angliae</h2>
     <div>
       {{ dkey_page.text|discard_floating_figures|render_figure_links|safe }}
+      {% for hybrid in dkey_hybrids %}
+        <p>
+          <b>{{ hybrid.number1 }}×{{ hybrid.number2 }}.
+            {% if dkey_page.title = hybrid.scientific_name1 %}
+              <i>{{ hybrid.scientific_name1 }}</i>
+            {% else %}
+              <a href="{{ hybrid.scientific_name1|dkey_url }}"
+                 ><i>{{ hybrid.scientific_name1 }}</i></a>
+            {% endif %}
+            ×
+            {% if dkey_page.title = hybrid.scientific_name2 %}
+              <i>{{ hybrid.scientific_name2 }}</i>
+            {% else %}
+              <a href="{{ hybrid.scientific_name2|dkey_url }}"
+                 ><i>{{ hybrid.scientific_name2 }}</i></a>
+            {% endif %}
+            →</b>
+          {{ hybrid.text|discard_floating_figures|render_figure_links|safe }}
+        </p>
+      {% endfor %}
     </div>
   {% endif %}
