--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -24,9 +24,9 @@
 
 /* Definitions */
 
-$headings-font: "Trebuchet MS", Helvetica, Arial, sans-serif;
-$body-font: Verdana, Geneva, sans-serif;
-$narrower-body-font: Tahoma, "Trebuchet MS", sans-serif;
+$headings-font: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif;
+$body-font: Verdana, Geneva, "Lucida Sans Unicode", sans-serif;
+$narrower-body-font: Tahoma, "Trebuchet MS", "Lucida Sans Unicode", sans-serif;
 
 $link-green: #508e31;
 $heading-green: #519136;
