Show user's avatar on main plantshare page.

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -17,7 +17,7 @@
     <h2>My Profile</h2>
     <a href="{% url ps-profile %}" class="edit">Edit Profile</a>
     <div>
-        <img src="/static/images/icons/avatar-default.png" alt="">
+        <img src="{{ avatar.thumb_url }}" alt="">
         <h3>{{ user.first_name|default:user.username }}</h3>
     </div>
     <table>
