--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -162,7 +162,7 @@
                 
                 <h2>New England Distribution and Conservation Status</h2>
                 <p>Exact status definitions can vary from state to
-                state. For precise details, please check with your state.</p>
+                state. For details, please check with your state.</p>
                 <div id="ne-status">
                 <table>
                     <thead>
