--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -377,8 +377,22 @@ $mini-table-font-size: 10px;
     body.taxa {
         #main {
             padding-bottom: 8px;
+            h1 {
+                margin-bottom: 0;
+            }
             p.common {
                 font-size: 20px;
+                margin: 0;
+            }
+        }
+        &#family, &#genus {
+            #main {
+                p.description {
+                    margin: 4px 0;
+                }
+                h4 {
+                    padding-top: 12px;
+                }
             }
         }
         &#species {
@@ -436,7 +450,13 @@ $mini-table-font-size: 10px;
                     }
                 }
             }
-
+        }
+        .visit-dkey {
+            margin: 14px 0;
+            a {
+                clear: left;
+                display: inline-block;
+            }
         }
     }
 }
