--- a/gobotany/site/templates/gobotany/full_key_placeholder.html
+++ b/gobotany/site/templates/gobotany/full_key_placeholder.html
@@ -17,7 +17,7 @@
                     longer to identify your plant, but once you do, you can get
                     lots of information on it.</p>
                     <p>We are completing data input for all these taxa, and the
-                    Full Key will be available in late 2012. Check back
+                    Full Key will be available in early 2013. Check back
                     soon!</p>
 {% endblock %}
 
